<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name">우체국보험</string>
    <string name="main_app_name">우체국보험</string>
    <string name="company_name">우체국</string>
    <string name="title_manage_auth">인증센터</string>
    <string name="title_login">로그인</string>
    <string name="title_agree_s_service">모바일 서비스 이용신청</string>
    <string name="title_login_certificate">공동인증 로그인</string>
    <string name="title_reg_certificate">공동인증서 등록</string>
    <string name="title_del_certificate">공동인증서 삭제</string>
    <string name="title_get_certification">공동인증서 가져오기</string>
    <string name="title_complete_cert">공동인증 인증완료</string>
    <string name="title_noti_bio">간편인증서비스 안내</string>
    <string name="title_del_bio">간편인증 조회/해지</string>
    <string name="title_agree_bio_service">개인인증번호 등록/변경</string>
    <string name="title_complete_pin">PIN인증 인증완료</string>
    <string name="title_complete_pattern">패턴인증 인증완료</string>
    <string name="title_complete_reg_bio">간편인증 등록/변경 완료</string>
    <string name="title_complete_del_bio">간편인증 해지 완료</string>
    <string name="title_mobile_auth">휴대폰인증</string>
    <string name="title_req_benefit">보험금청구</string>
    <string name="title_request">보험청구신청</string>
    <string name="title_request_child">자녀보험청구신청</string>
    <string name="title_smart_request">스마트보험금청구신청</string>
    <string name="title_search_req_benefit">지급진행조회 및 서류보완</string>
    <string name="title_add_docs">구비서류보완</string>
    <string name="title_choice_bank">금융기관 선택</string>
    <string name="title_choice_recomm">추천국/추천인 선택</string>
    <string name="title_guide_camera">사진 촬영 시 주의사항</string>
    <string name="title_guide_req">보험금청구 절차안내</string>
    <string name="title_guide_doc">보험금청구시 구비서류안내</string>
    <string name="title_search_addr">주소검색</string>
    <string name="title_smbr_psbl">부담보내역조회</string>
    <string name="title_privacy_guide">개인정보처리방침</string>
    <string name="title_guide_service">이용약관</string>
    <string name="title_default_dlg">알림</string>
    <string name="title_settings">설정</string>
    <string name="toast_finish">\'뒤로\' 버튼을 한번 더 누르면 종료됩니다.</string>
    <string name="tag_index">tag index</string>
    <string name="tag_img_id">img id tag</string>
    <string name="tag_img_path">img path tag</string>
    <string name="tag_thumb_path">thumb path tag</string>
    <string name="tag_addr_road">addr road tag</string>
    <string name="tag_town_name">town name tag</string>
    <string name="tag_id">id tag</string>
    <string name="tag_year">year tag</string>
    <string name="tag_month">month tag</string>
    <string name="tag_day_of_month">day tag</string>
    <string name="label_iucoa0m00">메인화면</string>
    <string name="label_web_start">투명화면</string>
    <string name="label_web_view">웹뷰화면</string>
    <string name="label_iucob0m00">로그인 방법 선택 화면</string>
    <string name="label_iucob1m00">스마트보험금청구 로그인 방법 선택 화면</string>
    <string name="label_iubc01m00">스마트보험금청구 로그인 방법 선택 화면</string>
    <string name="label_iubc02m00">블록체인 간편인증 메인 화면</string>
    <string name="label_iubc02m01">블록체인 간편인증 등록완료 화면</string>
    <string name="label_iubc03m00_p">블록체인 간편인증 약관 및 개인정보 수집이용 동의</string>
    <string name="label_iubc04m00_p">블록체인 간편인증 비밀번호 등록</string>
    <string name="label_iubc05m00_p">블록체인 간편인증 지문 등록</string>
    <string name="label_iubc06m00_p">블록체인 간편인증 패턴 등록</string>
    <string name="label_iubc04m01">블록체인 간편인증 비밀번호 인증</string>
    <string name="label_iubc05m01">블록체인 간편인증 지문 인증</string>
    <string name="label_iubc06m01">블록체인 간편인증 패턴 인증</string>
    <string name="label_iupc10m00">금융인증서 인증 화면</string>
    <string name="label_iupc20m00">PASS인증서 인증 화면</string>
    <string name="label_iucoc0m00_1">공동인증서 로그인 화면</string>
    <string name="label_iucoc0m00_2">공동인증서 비밀번호 입력 화면</string>
    <string name="label_iucoc0m00_3">공동인증서 선택 화면</string>
    <string name="label_iucoc0m00_4">공동인증서 확인 화면</string>
    <string name="label_iucoc0m00_web">공동인증서 로그인 화면(웹) </string>
    <string name="label_iupc80m00">공동인증서 본인인증 화면</string>
    <string name="label_iupc80m00_web">공동인증서 본인인증 화면(웹)</string>
    <string name="label_iuii60m00">보험금청구 절차안내 화면</string>
    <string name="label_iuii70m00">보험금청구시 구비서류안내 화면</string>
    <string name="label_iuii10m00_p">본인보험금청구신청 화면</string>
    <string name="label_iuii90m00_p">자녀보험금청구신청 화면</string>
    <string name="label_iubc10m00_p">스마트보험금청구신청 화면</string>
    <string name="label_iubc11m00">병원통합시스템 연결</string>
    <string name="label_iuii10m00_s">구비서류 보완 화면</string>
    <string name="label_iufc00m00">간편인증 인증 화면</string>
    <string name="label_iufc00m01">간편인증 인증완료 화면</string>
    <string name="label_iufc10m00">간편인증 등록 화면</string>
    <string name="label_iupc90m00">휴대폰본인인증 1회로그인 화면</string>
    <string name="label_iupc95m00">카카오페이인증 로그인 화면</string>
    <string name="label_iucog0m00">환경설정 화면</string>
    <string name="label_iuii22m00">사진선택 화면</string>
    <string name="label_iupc01m00">공동인증서 관리 화면</string>
    <string name="label_iupc02m00">공동인증서 가져오기 화면</string>
    <string name="label_iupc03m00">공동인증서 삭제 화면</string>
    <string name="label_iucof0m00">주소검색 화면</string>
    <string name="label_iupc51m00">PIN번호 등록 화면</string>
    <string name="label_iupc60m00">PIN번호 삭제 화면</string>
    <string name="label_iuii50m00_p">보험금청구 조회 화면</string>
    <string name="label_iuii01m00">보험금청구 화면</string>
    <string name="label_iupc30m00">간편인증 관리 화면</string>
    <string name="label_iupc31m00">간편인증서비스안내 화면</string>
    <string name="label_iupc32m00">간편인증 등록/변경 화면</string>
    <string name="label_iupc33m00">간편인증 조회/해지 화면</string>
    <string name="label_iupc34m00">개인인증번호 재등록 화면</string>
    <string name="label_iupc39m00">간편인증 등록/변경/해지 완료</string>
    <string name="label_iupc40m00">지문인증 해지 화면</string>
    <string name="label_iucog0m02">개인정보처리방침 화면</string>
    <string name="label_iucog0m01">이용약관 화면</string>
    <string name="label_iuii21s01">사진촬영 시 주의사항 화면</string>
    <string name="label_iupc70m00">추가인증(SMS/ARS) 화면</string>
    <string name="label_iupc70m00_p">휴대폰 인증 화면</string>
    <string name="label_iuii31m00">금융기관 선택 화면</string>
    <string name="label_iuii33m00_p">추천국/추천인 선택 화면</string>
    <string name="label_iucoc2m00">모바일 서비스 이용신청 화면</string>
    <string name="label_iucoc3m00">공동인증 인증완료 화면</string>
    <string name="label_old_readable">용도</string>
    <string name="label_user_name">사용자</string>
    <string name="label_ca_readable">발급기관</string>
    <string name="label_expiration_from">발급일</string>
    <string name="label_expiration_to">만료일</string>
    <string name="dlg_cert_delete_complete">공동인증서를 삭제하였습니다.</string>
    <string name="mv_app_name">TouchEn mVaccine</string>
    <string name="mv_mVaccineScanning">백신 구동 중입니다.</string>
    <string name="mv_COMMON_COPYRIGHT">© 2013 RAONSECURE,Inc. All rights reserved.</string>
    <string name="mv_dialog_stopdialog_textview">초후에 시간이 많이 걸리는 검사를 백그라운드 작업으로 변경합니다.</string>
    <string name="mv_no">아니요</string>
    <string name="mv_yes">예</string>
    <string name="mv_msg_rootingexitapp">루팅폰에서는 서비스를 이용하실 수 없습니다.</string>
    <string name="mv_msg_rootingyesorno">루팅폰입니다. 검사를 중지하실려면 예를  검사를 계속 진행하실려면 아니오를 누르세요</string>
    <string name="mv_msg_rootingyes">루팅폰입니다. 스마트폰 보안에 영향을 주는 구조변경(탈옥,루팅)을 한폰에서 발생한 문제는 자사에서는 책임지지 않습니다. </string>
    <string name="mv_count">검사파일수 : </string>
    <string name="mv_infected">악성코드 발견 수 : </string>
    <string name="mv_pattern">패턴버전 : </string>
    <string name="mv_engine">엔진버전 : </string>
    <string name="mv_dualengine">듀얼엔진버전 : </string>
    <string name="mv_scan_result">검사결과</string>
    <string name="mv_scan_result_msg">악성코드가 검출되었습니다. 삭제하시겠습니까? 삭제하지 않으면 스마트폰 내 정보가 해킹될 수 있습니다. </string>
    <string name="mv_scan_detect_malware">TouchEn mVaccine이 악성코드를 탐지 하였습니다.</string>
    <string name="mv_title_rootscan">루팅검사 </string>
    <string name="mv_msg_rootapp">루팅관련 불법앱이 설치되어 있습니다.삭제 후 해당앱을 다시 실행해 주십시오. </string>
    <string name="mv_msg_detect_malware_count"> 개의 악성코드를 발견하였습니다. </string>
    <string name="mv_msg_surenot_delete">삭제하지 않은 앱이 있습니다. 삭제하지 않고 이 화면에서 나가시겠습니까?</string>
    <string name="mv_delete">삭제</string>
    <string name="mv_close">닫기</string>
    <string name="mv_malware_name">악성코드명 : </string>
    <string name="mv_risk_high">위험도 : 높음</string>
    <string name="mv_stop">검사중지</string>
    <string name="mv_scanning_middle_title">악성코드 검사 진행 중 . . .</string>
    <string name="mv_path">검사경로: </string>
    <string name="mv_msg_updateprogress">업데이트 진행 중입니다.\n네트워크 상태에 따라서 시간이 지연될 수 있습니다.</string>
    <string name="mv_check_license">라이센스를 체크하는 중입니다.</string>
    <string name="mv_license_expired">라이센스가 만료되었습니다.</string>
    <string name="mv_license_not_matched">라이센스가 일치하지 않습니다.</string>
    <string name="mv_siteid_error">잘못된 사이트ID 입니다.</string>
    <string name="mv_finish">\"TouchEn_mVaccine\"을 종료합니다.</string>
    <string name="mv_msg_rootingdbfail">초기화에 실패했습니다. 루팅폰에서는 서비스를 이용하실 수 없습니다.</string>
    <string name="mv_sure_stop_scan">악성코드 검사를 중지시겠습니까?</string>
    <string name="mv_msg_remote_connection_dected">원격연결이 감지 되었습니다.</string>
    <string name="mv_msg_remote_connection_title">원격탐지</string>
    <string name="mv_realtime_title">실시간 검사</string>
    <string name="mv_realtime_message">실시간 검사가 구동 중입니다.</string>
    <string name="mv_malware_detect_headup_title">악성코드가 감지되었습니다</string>
    <string name="mv_malware_detect_headup_message">지금 바로 악성코드를 치료하세요</string>
    <string name="mv_channel_discript_detect_malware">악성코드 탐지 알림입니다.</string>
    <string name="mv_channel_discript_detect_mvaccine">mVaccine 탐지 알림입니다.</string>
    <string name="label_intro_title">우체국 모바일 청구앱</string>
    <string name="label_copyright">Copyright 2017 우정사업본부 ALL RIGHTS RESERVED.</string>
    <string name="label_ca">발급기관</string>
    <string name="label_expire_to">만료일</string>
    <string name="label_use_finger_login">지문인증 서비스 사용안내</string>
    <string name="label_noti_bio_login">간편인증 로그인이란?</string>
    <string name="label_choice_auth">인증방법 선택</string>
    <string name="label_auth_sms_ars">추가인증</string>
    <string name="label_auth_sms_ars_complete">정상적으로 인증되었습니다. \n[등록]버튼을 누르시면 개인인증번호 확인 후 간편인증이 등록됩니다.</string>
    <string name="label_normal_setting">일반설정</string>
    <string name="label_service_privacy">약관 및 정책</string>
    <string name="label_setting_push">푸시알림</string>
    <string name="label_setting_version">앱 버전</string>
    <string name="label_on">켬</string>
    <string name="label_off">끔</string>
    <string name="label_cert_number">인증번호</string>
    <string name="label_reg_qualification">인증방법을 등록하십시오.</string>
    <string name="label_empty_addr"><u>주소검색결과가 없습니다.</u></string>
    <string name="label_zipcode">우편번호</string>
    <string name="label_addr_default">기본주소</string>
    <string name="label_addr_detail">상세주소</string>
    <string name="label_addr">주소</string>
    <string name="label_service_content">서비스내용</string>
    <string name="label_service_process">서비스 이용방법</string>
    <string name="label_target_user">이용대상 고객</string>
    <string name="label_target_app">이용가능앱</string>
    <string name="label_target_service">이용가능 서비스</string>
    <string name="label_how_join">이용안내</string>
    <string name="label_available_device">이용 단말기 안내</string>
    <string name="guide_manage_bio">간편인증 서비스는 우체국 모바일보험 이용시 공동인증서 없이 개인인증번호, 패턴, 지문 등을 활용하여 간편하게 전자금융거래를 이용할 수 있는 서비스입니다.</string>
    <string name="guide_service_finger_1">우체국모바일 서비스를 가입하고, 서비스 지원이 가능한 스마트폰을 소유한 고객</string>
    <string name="guide_service_app_list">우체국 모바일보험앱</string>
    <string name="guide_service_service_list">로그인</string>
    <string name="guide_service_finger_join">* 이용가능한 폰을 1인 1폰으로 제한합니다.\n* 스마트폰에 간편인증 정보를 등록 하여야 합니다.(미등록 시 정보등록 후 진행)\n* 간편인증 서비스는 공동인증서와 별도로 제공하는 서비스입니다.\n* 스마트폰 변경 또는 앱인증변경시 재등록이 필요합니다.</string>
    <string name="guide_service_finger_device">안드로이드 6.0 이상, 지문인증을 지원하는 스마트폰</string>
    <string name="btn_setting_service">이용약관</string>
    <string name="btn_setting_privacy">개인정보처리방침</string>
    <string name="label_iufc30m00_title1">편리한 간편인증\n이용해 보세요.</string>
</resources>